feat: rename project

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: GitHub Sync
+name: GitHub Repo Sync
 author: Wei He <github@weispot.com>
 description: ⤵️ Sync current repository with remote
 branding:
