--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,5 @@
-name: GitHub Repo Sync
+- name: GitHub Repo Sync
+  uses: repo-sync/github-sync@v2.0.0name:
 author: Wei He <github@weispot.com>
 description: ⤵️ Sync current repository with remote
 branding:
