--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,9 @@ inputs:
   destination_branch:
     description: Branch name to sync to in this repo
     required: true
+  destination_token:
+    description: token in this repo
+    required: true
   github_token:
     description: GitHub token secret
     required: true
@@ -30,6 +33,7 @@ runs:
     GITHUB_TOKEN: ${{ inputs.github_token }}
     SYNC_TAGS: ${{ inputs.sync_tags }}
     DES_REPO: ${{ inputs.destination_repo }}
+    DES_REPO_TOKEN: ${{ inputs.destination_token }}
   args:
     - ${{ inputs.source_repo }}
     - ${{ inputs.source_branch }}:${{ inputs.destination_branch }}
